04-Container-Security/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-traffic
  namespace: search
spec:
  podSelector:
    matchLabels:
      app: nginx-search
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: payments
      podSelector:
        matchLabels:
          app: nginx-payments
    ports:
    - protocol: TCP
      port: 80
